@@ -1,0 +1,11 @@
+ 10 40
+3         TCTGATAGTGACGTCACCGGCGTTTATTACCCTACGTTCA
+4         TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACATTCA
+9         TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACATTCA
+6         TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACATTCA
+10        TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACCTTCA
+1         TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACCTTCA
+5         TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACCTTCA
+8         TATGGCAGTGACGTCATCGGCGTCAATTCCCCGACCTTCA
+2         GATGGCAGTGACGTCTTCGGCGTCAATTCCCCGACATTGA
+7         GATGGCAGTGACGTCTTCGGCGTCAATTCCCCGACATTCA
