@@ -1,3 +1,6 @@
+06/11/17 Julien Dutheil
+* Added estimation of kappa to bppPopStats + bugs fixed
+
 06/06/17 -*- Version 2.3.1 -*- 
 
 10/05/17 -*- Version 2.3.0 -*- 
